Splitting things into podcasts and games apps.

--- a/podcasts/templates/podcasts/home.html
+++ b/podcasts/templates/podcasts/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Django REST Framework Examples</title>
+    <title>Podcasts - Django REST Framework Examples</title>
 </head>
 <body>
-<h1>Examples for the Django REST Framework</h1>
-<h2><a href="{% url 'api-root' %}">View the API</a></h2>
+<h1>Podcast Example for the Django REST Framework</h1>
+<h2><a href="{% url 'podcasts:api-root' %}">View the API</a></h2>
 </body>
 </html>
