Wiring up non-API views for Podcasts.

--- a/project/templates/project/home.html
+++ b/project/templates/project/home.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h1>Examples for the Django REST Framework</h1>
-<h2><a href="{% url 'games:api-root' %}">View the Game API</a></h2>
-<h2><a href="{% url 'podcasts:api-root' %}">View the Podcasts API</a></h2>
+<h2><a href="{% url 'games:game-list' %}">View the Game API</a></h2>
+<h2><a href="{% url 'podcasts:podcast_list' %}">View the Podcast List</a></h2>
+<h2><a href="{% url 'podcasts:api-root' %}">View the Podcast API</a></h2>
 </body>
 </html>
