--- a/podcasts/templates/podcasts/home.html
+++ b/podcasts/templates/podcasts/home.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Podcasts - Django REST Framework Examples</title>
-</head>
-<body>
-<h1>Podcast Example for the Django REST Framework</h1>
-<h2><a href="{% url 'podcasts:api-root' %}">View the API</a></h2>
-</body>
-</html>
+{% extends "podcasts/base.html" %}
+{% block body %}
+    <h1>Podcast Example for the Django REST Framework</h1>
+    <h2><a href="{% url 'podcasts:podcast_list' %}">View List of Podcasts</a></h2>
+    <h2><a href="{% url 'podcasts:api-root' %}">View the API</a></h2>
+{% endblock %}
